# opencmw-cpp

.github/workflows/: build_cmake.yml
docs/: SSLKeygenHowTo.md
src/client/include/: ClientContext.hpp  RestClient.hpp
src/client/test/: RestClient_tests.cpp
src/client/test/assets/: ca-cert.pem  ca-key.pem  client-cert.pem  client-key.pem  client-req.pem  server-cert.pem  server-key.pem  server-req.pem
src/core/: CMakeLists.txt
src/core/include/: MIME.hpp
src/serialiser/: CMakeLists.txt
src/utils/: CMakeLists.txt
